[workspace]
members = [
    "tool",
    "examples/wef-winit",
    "examples/wef-example",
]

default-members = ["."]
resolver = "2"

[package]
name = "wef"
version = "0.7.0"
edition = "2024"
authors = ["sunli <scott_s829@163.com>"]
license = "Apache-2.0"
homepage = "https://github.com/longbridge/wef"
repository = "https://github.com/longbridge/wef"
description = "Wef is a Rust library for embedding WebView functionality using Chromium Embedded Framework (CEF3) with offscreen rendering support."

[build-dependencies]
cc = { version = "1.2.18", features = ["parallel"] }
pkg-config = "0.3.32"
dirs = "6.0.0"

[dependencies]
image = { version = "0.25.6", default-features = false }
bitflags = "2.9.0"
thiserror = "2.0.12"
num_enum = "0.7.3"
mime = "0.3.17"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tuple_len = "3.0.0"
futures-util = "0.3.31"

[workspace.dependencies]
wef = { path = "." }
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }

anyhow = "1"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
schemars = "1"
smallvec = "1"
rust-i18n = "3"
raw-window-handle = "0.6.2"
smol = "1"
tracing = "0.1.41"
notify = "7.0.0"
lsp-types = "0.97.0"

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[lints]
workspace = true

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
# Optimize image processing libraries in debug builds for better performance
image = { opt-level = 3 }
png = { opt-level = 3 }
reqwest = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]