[workspace]
members = [
    "crates/wef",
    "crates/cargo-wef",
    "crates/webview",
    "examples/wef-winit",
    "examples/wef-example",
]

default-members = ["crates/wef"]
resolver = "2"

[workspace.dependencies]
wef = { path = "crates/wef" }
gpui-webview = { path = "crates/webview" }

anyhow = "1"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
smallvec = "1"
raw-window-handle = "0.6.2"
smol = "1"
tracing = "0.1.41"
notify = "7.0.0"

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
# Optimize image processing libraries in debug builds for better performance
image = { opt-level = 3 }
png = { opt-level = 3 }
reqwest = { opt-level = 3 }
