[package]
name = "wef-example"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
wef = { path = "../../crates/wef" }
gpui-webview = { path = "../../crates/webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
